cynic-codegen/src/inline_fragments_derive/snapshots/cynic_codegen__inline_fragments_derive__tests__interface.snap
---
source: cynic-codegen/src/inline_fragments_derive/tests.rs
expression: "format_code(format!(\"{}\", tokens))"
---
#[automatically_derived]
impl<'de> ::cynic::serde::Deserialize<'de> for Node {
    fn deserialize<D>(deserializer: D) -> Result<Self, D::Error>
    where
        D: ::cynic::serde::Deserializer<'de>,
    {
        deserializer.deserialize_map(::cynic::__private::InlineFragmentVisitor::<Self>::new())
    }
}
#[automatically_derived]
impl<'de> ::cynic::InlineFragments<'de> for Node {
    fn deserialize_variant<D>(typename: &str, deserializer: D) -> Result<Self, D::Error>
    where
        D: ::cynic::serde::Deserializer<'de>,
    {
        if Some(typename) == <Post as ::cynic::QueryFragment>::TYPE {
            return <Post as ::cynic::serde::Deserialize<'de>>::deserialize(deserializer)
                .map(Node::Post);
        }
        if Some(typename) == <Author as ::cynic::QueryFragment>::TYPE {
            return <Author as ::cynic::serde::Deserialize<'de>>::deserialize(deserializer)
                .map(Node::Author);
        }
        Ok(Node::Other)
    }
}
#[automatically_derived]
impl ::cynic::QueryFragment for Node {
    type SchemaType = schema::Node;
    type VariablesFields = ();
    const TYPE: Option<&'static str> = Some("Node");
    fn query(
        mut builder: ::cynic::queries::SelectionBuilder<
            '_,
            Self::SchemaType,
            Self::VariablesFields,
        >,
    ) {
        let fragment_builder = builder.inline_fragment();
        let mut fragment_builder =
            fragment_builder.on::<<Post as ::cynic::QueryFragment>::SchemaType>();
        <Post as ::cynic::QueryFragment>::query(fragment_builder.select_children());
        let fragment_builder = builder.inline_fragment();
        let mut fragment_builder =
            fragment_builder.on::<<Author as ::cynic::QueryFragment>::SchemaType>();
        <Author as ::cynic::QueryFragment>::query(fragment_builder.select_children());
    }
}
#[allow(clippy::no_effect, non_camel_case_types)]
const _: fn() = || {
    #[deprecated(
        note = "the rename attribute on InlineFragments is deprecated and should be removed.  InlineFragments variants now get their type name from their inner QueryFragment.",
        since = "2.0.0"
    )]
    struct rename {}
    rename {};
};

